Snap to Cursor (Offset) doesn't work well with Active Element Pivot #43774

Closed
opened 2015-02-22 07:08:11 +01:00 by Leon Cheung · 6 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: (example: 2.73.8 81be1c7
Worked: n/a

Short description of error
This function appears to work with pivot point types like Bounding Box Center and Median Point currently, however, when using Active Element as current pivot point, it always uses Bounding Box Center instead of what it is expected. So I wonder if there is something missing here. Thanks.

Exact steps for others to reproduce the error
Quite intuitive, no example needed. :)

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: (example: 2.73.8 81be1c7 Worked: n/a **Short description of error** This function appears to work with pivot point types like Bounding Box Center and Median Point currently, however, when using Active Element as current pivot point, it always uses Bounding Box Center instead of what it is expected. So I wonder if there is something missing here. Thanks. **Exact steps for others to reproduce the error** Quite intuitive, no example needed. :)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

This issue was referenced by 17b8479101

This issue was referenced by 17b847910169d03051959c77992217936f6a8167

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 17b8479101.

Closed by commit 17b8479101.
Author
Member

Cool! Though it is better to be fixed in Edit / Pose Mode, as well. :)

Cool! Though it is better to be fixed in Edit / Pose Mode, as well. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43774
No description provided.