Fix T43774: Snap to Cursor ignores active pivot